--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.whispersystems</groupId>
     <artifactId>signal-protocol-java</artifactId>
-    <version>2.8.1-gluon</version>
+    <version>2.8.1-gluon-1</version>
     <packaging>jar</packaging>
 
     <name>signal-protocol-java</name>
@@ -110,5 +110,12 @@
       </plugin>
         </plugins>
     </build>
+  <distributionManagement>
+    <repository>
+            <id>gluon-nexus</id>
+            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
+    </repository>
+  </distributionManagement>
+
 
 </project>
