--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.whispersystems</groupId>
     <artifactId>signal-protocol-java</artifactId>
-    <version>2.8.1-gluon-2-SNAPSHOT</version>
+    <version>2.8.1-gluon-2</version>
     <packaging>jar</packaging>
 
     <name>signal-protocol-java</name>
@@ -23,19 +23,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.whispersystems</groupId>
-            <artifactId>curve25519-java</artifactId>
-            <version>0.5.0-gluon</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.4.0</version>
+            <version>3.17.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.whispersystems</groupId>
+            <artifactId>curve25519-java</artifactId>
+            <version>0.5.0-gluon-2</version>
         </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -108,6 +103,17 @@
           </execution>
         </executions>
       </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.6</version>
+                <configuration>
+                    <mainClass>${main.class}</mainClass>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
   <distributionManagement>
