--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.whispersystems</groupId>
     <artifactId>signal-protocol-java</artifactId>
-    <version>2.8.1-gluon-3</version>
+    <version>2.8.1-gluon-4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>signal-protocol-java</name>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.whispersystems</groupId>
             <artifactId>curve25519-java</artifactId>
-            <version>0.5.0-gluon-3</version>
+            <version>0.5.0-gluon-4-SNAPSHOT</version>
         </dependency>
     <dependency>
       <groupId>junit</groupId>
