--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.whispersystems</groupId>
     <artifactId>signal-protocol-java</artifactId>
-    <version>2.8.1-gluon-5-SNAPSHOT</version>
+    <version>2.8.1-gluon-5</version>
     <packaging>jar</packaging>
 
     <name>signal-protocol-java</name>
