--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.whispersystems</groupId>
     <artifactId>signal-protocol-java</artifactId>
-    <version>2.8.1-gluon-7</version>
+    <version>2.8.1-gluon-8-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>signal-protocol-java</name>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.17.3</version>
+            <version>3.19.1</version>
         </dependency>
         <dependency>
             <groupId>org.whispersystems</groupId>
