--- a/java/pom.xml
+++ b/java/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.whispersystems</groupId>
             <artifactId>curve25519-java</artifactId>
-            <version>0.5.0-gluon-4</version>
+            <version>0.5.0-gluon-5-SNAPSHOT</version>
         </dependency>
     <dependency>
       <groupId>junit</groupId>
